Use `getFirst()` fot `ArrayLists`